# portus

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/portus-cli/: Cargo.toml
crates/portus-cli/src/: dashboard.rs  helpers.rs  main.rs  mcp.rs
crates/portus-core/: Cargo.toml
crates/portus-core/src/: ipc.rs  lib.rs  model.rs  paths.rs  port_check.rs  protocol.rs  registry.rs  scan.rs  transport.rs
crates/portus-daemon/: Cargo.toml
crates/portus-daemon/src/: main.rs
src/: lib.rs
tests/: daemon_lifecycle.rs  mcp_stdio.rs
