[package]
name = "portus-workspace-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[workspace]
members = ["crates/portus-core", "crates/portus-daemon", "crates/portus-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
portus-core = { path = "crates/portus-core" }
crossterm = "0.28"
ratatui = "0.29"
interprocess = { version = "2", features = ["tokio"] }
widestring = "1"

[dev-dependencies]
anyhow = { workspace = true }
interprocess = { workspace = true }
portus-core = { workspace = true }
tempfile = "3"
tokio = { workspace = true }
