[package]
name = "portus-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for Portus port allocation daemon"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }
interprocess = { workspace = true }
widestring = { workspace = true }

[dev-dependencies]
tempfile = "3"
